[tool.poetry]
name = "pard"
version = "0.2.1.0"
description = "Physicochemical Amino acid Replacement Distances"
authors = ["JasonMendoza2008 <lhotteromain@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
mypy = "^0.982"
pytest-mypy = "^0.10.0"
coverage = "^6.4.4"
coverage-badge = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
