[tool.poetry]
name = "pard"
version = "0.4.0.0"
description = "Physicochemical Amino acid Replacement Distances"
authors = ["JasonMendoza2008 <lhotteromain@gmail.com>"]
readme = "README.md"
packages = [
    {include = "pard"},
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
mypy = "^0.991"
pytest-mypy = "^0.10.2"
coverage = "^6.4.4"
coverage-badge = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
